# study-language

./: .gitignore  README.md  manage.py  pyproject.toml
account/: admin.py  authenticate.py  forms.py  managers.py  models.py  tasks.py  urls.py  user_crypt.py  views.py
account/migrations/: 0001_initial.py
study_language/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  email_verify_done.html
templates/registration/: login.html  login_widget.html  logout.html  password_confirmed.html  signup.html
