[tool.poetry]
name = "study-language"
version = "0.1.0"
description = ""
authors = ["Ihor Diakiv"]
readme = "README.md"
packages = [{include = "study_language"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"
celery = {extras = ["redis"], version = "^5.2.7"}
whitenoise = "^6.4.0"
django-bootstrap4 = "^23.1"
redis = "^4.5.4"
flower = "^1.2.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
